# Term-Project

./: .env  AssetExample.py  InterfaceExample.txt  README.md  main.py  mainExample.py  pyproject.toml  requirements.txt
Data/: DataTemplete.erd
DuckDB/: __init__.py  connection.py  interface.py  item.py  map.py  monster.py  user.py
Flet_Asset/: Asset.py  __init__.py
Service/: __init__.py  crawler_service.py  search_service.py  sort_service.py
