[project]
name = "term-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "duckdb>=1.5.3",
    "flet>=0.85.2",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "selenium>=4.44.0",
]
